-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
There were examples in the field with RoCE setups which demonstrate that RDMA_CM_EVENT_CONNECT_ERROR may be received when connection is neither in IBLND_CONN_ACTIVE_CONNECT nor IBLND_CONN_PASSIVE_WAIT state
This causes the assertion in kiblnd_cm_callback() to fail:
ASSERTION( conn->ibc_state == 1 || conn->ibc_state == 2 )
It is proposed to handle this in a more gracious manner: report the event as unexpected and allow the flow to continue. If there are indeed issues on the connection, it is expected to report transaction errors and get cleaned up without crashing the whole system.